[project]
name = "sqlinjection"
version = "0.1.0"
description = ""
authors = [
    {name = "Joseph Ditton",email = "jditton.atomic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
